Setup basic omnibar for layouts

--- a/package.json
+++ b/package.json
@@ -82,6 +82,11 @@
         "height": 1080
       },
       {
+      "file": "Omnibar.html",
+      "width": 1920,
+      "height": 1080
+      },
+      {
       "file": "Intermission.html",
       "width": 1920,
       "height": 1080
