Added new layout that was needed and adjusted other graphics

--- a/package.json
+++ b/package.json
@@ -72,6 +72,11 @@
       "height": 1080
       },
       {
+      "file": "GBA_1p_IV_Calc.html",
+      "width": 1920,
+      "height": 1080
+      },
+      {
         "file": "GBA_2p.html",
         "width": 1920,
         "height": 1080
