Added IV Calc section to 16x9 1p Layout, adjusted timer sizes

--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
       "height": 1080
       },
       {
+      "file": "16x9_1p_IV_Calc.html",
+      "width": 1920,
+      "height": 1080
+      },
+      {
       "file": "DS_1p.html",
       "width": 1920,
       "height": 1080
